update leetcode problem 263, 264, 268

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,9 +165,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="257. binary-tree-paths.cpp" />
-    <ClCompile Include="258. add-digits.cpp" />
-    <ClCompile Include="260. single-number-iii.cpp" />
+    <ClCompile Include="263. ugly-number.cpp" />
+    <ClCompile Include="264. ugly-number-ii.cpp" />
+    <ClCompile Include="268. missing-number.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
