--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,31 +65,22 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="278. first-bad-version.cpp">
+    <ClCompile Include="297. serialize-and-deserialize-binary-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="279. perfect-squares.cpp">
+    <ClCompile Include="299. bulls-and-cows.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="283. move-zeroes.cpp">
+    <ClCompile Include="300. longest-increasing-subsequence.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="284. peeking-iterator.cpp">
+    <ClCompile Include="303. range-sum-query-immutable.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="287. find-the-duplicate-number.cpp">
+    <ClCompile Include="304. range-sum-query-2d-immutable.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="289. game-of-life.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="290. word-pattern.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="292. nim-game.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="295. find-median-from-data-stream.cpp">
+    <ClCompile Include="306. additive-number.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
