reupdate leetcode problem 1096 and update doube-weekly-contest3 and weekly-contest143

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -166,8 +166,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="1096. brace-expansion-ii.cpp" />
+    <ClCompile Include="double-weekly-contest3.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
+    <ClCompile Include="weekly-contest143.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
