--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,11 +165,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1096. brace-expansion-ii.cpp" />
-    <ClCompile Include="double-weekly-contest3.cpp" />
+    <ClCompile Include="307. range-sum-query-mutable.cpp" />
+    <ClCompile Include="309. best-time-to-buy-and-sell-stock-with-cooldown.cpp" />
+    <ClCompile Include="310. minimum-height-trees.cpp" />
+    <ClCompile Include="312. burst-balloons.cpp" />
+    <ClCompile Include="313. super-ugly-number.cpp" />
+    <ClCompile Include="316. remove-duplicate-letters.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
-    <ClCompile Include="weekly-contest143.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
