update leetcode problem 331, 338, 343, 354, 357, 363

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,15 +165,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="318. maximum-product-of-word-lengths.cpp" />
-    <ClCompile Include="319. bulb-switcher.cpp" />
-    <ClCompile Include="320. generalized-abbreviation.cpp" />
-    <ClCompile Include="322. coin-change.cpp" />
-    <ClCompile Include="324. wiggle-sort-ii.cpp" />
-    <ClCompile Include="326. power-of-three.cpp" />
-    <ClCompile Include="328. odd-even-linked-list.cpp" />
-    <ClCompile Include="329. longest-increasing-path-in-a-matrix.cpp" />
-    <ClCompile Include="330. patching-array.cpp" />
+    <ClCompile Include="331. verify-preorder-serialization-of-a-binary-tree.cpp" />
+    <ClCompile Include="338. counting-bits.cpp" />
+    <ClCompile Include="343. integer-break.cpp" />
+    <ClCompile Include="354. russian-doll-envelopes.cpp" />
+    <ClCompile Include="357. count-numbers-with-unique-digits.cpp" />
+    <ClCompile Include="363. max-sum-of-rectangle-no-larger-than-k.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
