update leetcode problem 282, 301, 315. They are toooo hard :(, I only copy other solutions

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -164,6 +164,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="282. expression-add-operators.cpp" />
+    <ClCompile Include="301. remove-invalid-parentheses.cpp" />
+    <ClCompile Include="315. count-of-smaller-numbers-after-self.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
