--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -62,5 +62,11 @@
     <ClCompile Include="282. expression-add-operators.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="301. remove-invalid-parentheses.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="315. count-of-smaller-numbers-after-self.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
