update leetcode problem 373, 378, 380, 381, 382

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,7 +163,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="372. super-pow.cpp" />
+    <ClCompile Include="373. find-k-pairs-with-smallest-sums.cpp" />
+    <ClCompile Include="378. kth-smallest-element-in-a-sorted-matrix.cpp" />
+    <ClCompile Include="380. insert-delete-getrandom-o1.cpp" />
+    <ClCompile Include="381. insert-delete-getrandom-o1-duplicates-allowed.cpp" />
+    <ClCompile Include="382. linked-list-random-node.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
   </ItemGroup>
