--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -59,43 +59,28 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="391. perfect-rectangle.cpp">
+    <ClCompile Include="407. trapping-rain-water-ii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="393. utf-8-validation.cpp">
+    <ClCompile Include="412. fizz-buzz.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="395. longest-substring-with-at-least-k-repeating-characters.cpp">
+    <ClCompile Include="415. add-strings.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="396. rotate-function.cpp">
+    <ClCompile Include="416. partition-equal-subset-sum.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="397. submissions.cpp">
+    <ClCompile Include="419. battleships-in-a-board.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="398. random-pick-index.cpp">
+    <ClCompile Include="421. maximum-xor-of-two-numbers-in-an-array.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="399. evaluate-division.cpp">
+    <ClCompile Include="423. reconstruct-original-digits-from-english.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="400. nth-digit.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="401. binary-watch.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="402. remove-k-digits.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="404. sum-of-left-leaves.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="405. convert-a-number-to-hexadecimal.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="406. queue-reconstruction-by-height.cpp">
+    <ClCompile Include="424. longest-repeating-character-replacement.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
