--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -59,7 +59,7 @@
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="DWC-4.cpp">
+    <ClCompile Include="WC145.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
