--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,9 +163,28 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="1078. occurrences-after-bigram.cpp" />
+    <ClCompile Include="1079. letter-tile-possibilities.cpp" />
+    <ClCompile Include="1080. insufficient-nodes-in-root-to-leaf-paths.cpp" />
+    <ClCompile Include="1081. Smallest Subsequence of Distinct Characters.cpp" />
+    <ClCompile Include="1089. duplicate-zeros.cpp" />
+    <ClCompile Include="1090. largest-values-from-labels.cpp" />
+    <ClCompile Include="1091. shortest-path-in-binary-matrix.cpp" />
+    <ClCompile Include="1092. shortest-common-supersequence.cpp" />
+    <ClCompile Include="1093. statistics-from-a-large-sample.cpp" />
+    <ClCompile Include="1094. car-pooling.cpp" />
+    <ClCompile Include="1095. find-in-mountain-array.cpp" />
+    <ClCompile Include="1096. brace-expansion-ii.cpp" />
+    <ClCompile Include="1103. distribute-candies-to-people.cpp" />
+    <ClCompile Include="1104. path-in-zigzag-labelled-binary-tree.cpp" />
+    <ClCompile Include="1105. filling-bookcase-shelves.cpp" />
+    <ClCompile Include="1106. parsing-a-boolean-expression.cpp" />
+    <ClCompile Include="1108. defanging-an-ip-address.cpp" />
+    <ClCompile Include="1109. corporate-flight-bookings.cpp" />
+    <ClCompile Include="1110. delete-nodes-and-return-forest.cpp" />
+    <ClCompile Include="1111. maximum-nesting-depth-of-two-valid-parentheses-strings.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
-    <ClCompile Include="WC145.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
